--- a/views/account/personalInfo.ejs
+++ b/views/account/personalInfo.ejs
@@ -50,7 +50,7 @@
                     <textarea class="form-control" id="exampleInputPassword1"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Submit</button>
               </form>
             
         </div>
