--- a/views/features/bidding.ejs
+++ b/views/features/bidding.ejs
@@ -12,12 +12,9 @@
     </div>
     <br>
     <div class="row">
-        <div class="container-fluid col-6">
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-
+        <div class="search-container">
+            <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+            <button class="search-button" type="submit">Search</button>
         </div>
     </div>
     <br><br>
