--- a/views/products/assam/assam.ejs
+++ b/views/products/assam/assam.ejs
@@ -21,6 +21,15 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Hover overlay for 'Add to Basket' and Magnifying Glass -->
+                    <div class="hover-overlay">
+                        <div class="magnifier"><i class="fas fa-search"></i></div>
+                        <div class="add-to-cart">
+                            <span class="text">ADD TO BASKET</span>
+                            <span class="cart-icon"><i class="fas fa-shopping-cart"></i></span>
+                        </div>
+                    </div>
                 </div>
             </a>
         <% } %>
