--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -58,10 +58,12 @@
           <a class="nav-link" href="/account/personalInfo">My Account</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> <br> <br>
+      <div class="search-container">
+        <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+        <button class="search-button" type="submit">Search</button>
+    </div>
+    
+    
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link " aria-current="page" href="/login">Login</a>
