--- a/views/community/main.ejs
+++ b/views/community/main.ejs
@@ -9,6 +9,7 @@
                 Home
                 </a>
                 <a href="#" class="list-group-item list-group-item-action">Notifications</a>
+                <a href="/community/registerAsBidder" class="list-group-item list-group-item-action">Register as Bidder</a>
                 <a href="#" class="list-group-item list-group-item-action">Communites</a>
                 <a href="/community/profile" class="list-group-item list-group-item-action">Profile</a>
                 
