--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,8 +42,36 @@
         </div>
     </div>
 
+    <!-- cancellations release -->
+     <h2 class="table-head">Cancellation Latest Updates !</h2>
+    <table class="table">
+        <tr>
+            <td>
+                <span class="badge text-bg-danger">New !</span> Special cancellation for Special Cover released on the occasion of 232nd Birth Anniversary of Lokmata Rani Rashmoni is available till 28-10-2024 <a href="">Read More</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <span class="badge text-bg-danger">New !</span> Special cancellation for Supreme Court of India – 75 Years stamp is available till 21-10-2024 <a href="">Read More</a>
+            </td>
+        </tr>
+    </table>
+
     <!-- Chatbot Integration -->
-    <button class="chatbot-button" onclick="toggleChatbot()"> </button>
+
+    <!-- <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "od1YgCx-w78Ccr9D9QHht",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="od1YgCx-w78Ccr9D9QHht"
+        domain="www.chatbase.co"
+        defer>
+    </script> -->
+    <!-- <button class="chatbot-button" onclick="toggleChatbot()"> </button>
 
     <div class="chatbot-window">
         <div class="chatbot-header">PostPal</div>
@@ -251,6 +279,6 @@
             background-image: url('https://i.ibb.co/NWXYVKJ/image.png');
             background-size: cover;
         }
-    </style>
+    </style> -->
 </body>
 
